--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
-  }, 
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
@@ -23,6 +23,7 @@
     "@ngrx/store": "^14.3.2",
     "@ngrx/store-devtools": "^14.3.2",
     "bootstrap": "^5.2.2",
+    "component": "^1.1.0",
     "ngrx": "^0.0.1-security",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
