--- a/package.json
+++ b/package.json
@@ -10,30 +10,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
-    "@independer/ng-modal": "^2.0.0",
-    "@microsoft/signalr": "^7.0.3",
-    "@ngrx/effects": "^14.3.2",
-    "@ngrx/store": "^14.3.2",
-    "@ngrx/store-devtools": "^14.3.2",
+    "@angular/animations": "^19.1.6",
+    "@angular/common": "^19.1.6",
+    "@angular/compiler": "^19.1.6",
+    "@angular/core": "^19.1.6",
+    "@angular/forms": "^19.1.6",
+    "@angular/platform-browser": "^19.1.6",
+    "@angular/platform-browser-dynamic": "^19.1.6",
+    "@angular/router": "^19.1.6",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@ngrx/effects": "^19.0.1",
+    "@ngrx/operators": "^18.0.0",
+    "@ngrx/store": "^19.0.1",
+    "@ngrx/store-devtools": "^19.0.1",
     "bootstrap": "^5.2.2",
-    "component": "^1.1.0",
     "ngrx": "^0.0.1-security",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.8",
-    "@angular/cli": "~14.2.8",
-    "@angular/compiler-cli": "^14.2.0",
+    "@angular-devkit/build-angular": "^19.1.7",
+    "@angular/cli": "~19.1.7",
+    "@angular/compiler-cli": "^19.1.6",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
@@ -41,6 +40,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2"
+    "typescript": "~5.7.3"
   }
 }
