--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true,
-	"enableIvy": false
+	"enableIvy": false,
+  "sourceMap": true,
   }
 }
