--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+			"sourceMap" : {
+				"scripts": true,
+				"styles": true,
+				"vendor": true
+			},
             "outputPath": {
               "base": "dist/cposweb"
             },
